overflow issue and search filter case sensitive fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -27,3 +27,7 @@
     border-color: #001529;
     color: rgba(255,255,255,.65);
 }
+
+.sideNav{
+    height: initial
+}
